# criando_agentes_agno

./: .gitignore  0_llm_call.py  1.1.researcher.py  1.2.analista.py  1.3.1.own_tolls_open_ai.py  1.3.own_tolls.py  1.4.analista.py  1.5.analista.py  README.md  calculadora.py  pyproject.toml  test_my_os.py  teste.py
tmp/: .project  data.db
tmp/.dbeaver/: data-sources.json  project-settings.json
